@@ -21,6 +21,9 @@ Version 1.5
 
 - In the LaTeX formatter, escape special &, < and > chars (#648).
 
+- In the LaTeX formatter, fix display problems for styles with token
+  background colors (#670).
+
 - Enhancements to the Squid conf lexer (#664).
 
 - Several fixes to the reStructuredText lexer (#636).
